# finschema

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: alpha_scope.md  api.md  benchmarks.md  cookbook.md  getting-started.md  index.md
finschema/: __init__.py  errors.py
finschema/cli/: main.py
finschema/integrations/: __init__.py  airflow.py  dagster.py  fastapi.py  pandas.py  polars.py  pyspark.py
finschema/quality/: __init__.py  config.py  decorators.py  engine.py  report.py
finschema/quality/rules/: __init__.py  fx_rules.py  identifier_rules.py  nav_rules.py  portfolio_rules.py  price_rules.py  settlement_rules.py
finschema/reference/: __init__.py  countries.py  currencies.py  exchanges.py  holidays.py  lei_registry.py
finschema/schemas/: __init__.py  cashflow.py  corporate_action.py  fx.py  instrument.py  nav.py  portfolio.py  position.py  trade.py
finschema/types/: __init__.py  _pydantic.py  banking.py  enums.py  identifiers.py  market.py  monetary.py  temporal.py
scripts/: benchmark_pandas_validate.py
tests/: test_errors_and_reference.py
tests/cli/: test_cli.py
tests/integrations/: test_fastapi_integration.py  test_integrations_exports.py  test_pandas_integration.py  test_polars_integration.py
tests/quality/: test_engine.py  test_engine_branches.py  test_report_outputs.py  test_v05_engine_config.py  test_v05_report.py
tests/schemas/: test_schemas.py  test_schemas_extra.py  test_v05_schemas.py
tests/types/: test_beta_types.py  test_beta_types_extra.py  test_identifiers.py  test_market.py  test_money.py  test_property_identifiers.py  test_pydantic_integration.py  test_temporal.py
