[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "finschema"
version = "0.5.0"
description = "Pydantic-compatible financial data types and validators"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "finschema maintainers" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "tomli>=2.0; python_version < '3.11'"
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
fastapi = ["fastapi>=0.110", "httpx>=0.27"]
polars = ["polars>=0.20"]
live = ["httpx>=0.27"]
yaml = ["PyYAML>=6.0"]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "hypothesis>=6.112",
  "mypy>=1.11",
  "ruff>=0.6",
  "pre-commit>=3.7"
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26"
]

[project.scripts]
finschema = "finschema.cli.main:main"

[project.urls]
Homepage = "https://github.com/tkrenn12306/finschema"
Repository = "https://github.com/tkrenn12306/finschema"
Issues = "https://github.com/tkrenn12306/finschema/issues"

[tool.hatch.build.targets.wheel]
packages = ["finschema"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "PIE", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
warn_unreachable = true
show_error_codes = true
packages = ["finschema"]

[[tool.mypy.overrides]]
module = ["fastapi", "starlette", "starlette.*", "polars", "tomli"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=finschema --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
markers = [
  "anyio: async integration tests using anyio-compatible runtime",
]

[tool.coverage.run]
branch = true
source = ["finschema"]
omit = ["finschema/integrations/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
omit = ["finschema/integrations/*"]
